--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.maic</groupId>
-    <artifactId>PingCommand</artifactId>
+    <artifactId>pingCommand</artifactId>
     <version>1.0</version>
 
     <properties>
